--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,11 @@
+/*--------------------------------------------------------------------------------
 
+	# Minimis Template 1.0 - Mar 1, 2018
+	# ------------------------------------------------------------------------
+	# Designed & coded by Awe7
+	# Websites:  http://www.awe7.com -  Email: info@awe7.com
+
+----------------------------------------------------------------------------------
 
 	1. base
 	2. button
