--- a/trgroup/sass/_media.sass
+++ b/trgroup/sass/_media.sass
@@ -18,3 +18,5 @@
         text-align: center
     .cargo-expensive-title
         line-height: 1.7
+    .contacts-block-adress
+        filter: grayscale(0)
