--- a/trgroup/sass/_header.sass
+++ b/trgroup/sass/_header.sass
@@ -17,6 +17,9 @@
             align-items: center
             & span
                 padding-left: 5px
+.call
+    &:hover
+        cursor: pointer
 .block-last
     background-color: #fff
     color: #000
