--- a/trgroup/sass/_media.sass
+++ b/trgroup/sass/_media.sass
@@ -20,3 +20,7 @@
         line-height: 1.7
     .contacts-block-adress
         filter: grayscale(0)
+    .popup-content
+        max-width: 20rem
+    .popup-form .text
+        width: 15rem
