--- a/trgroup/sass/_interface.sass
+++ b/trgroup/sass/_interface.sass
@@ -1,5 +1,5 @@
 .button
-    background: linear-gradient(-22deg, #0b5e8f, #4189a8, #0b5e8f)
+    background: linear-gradient(to bottom right, #0b5e8f, #33a0e0 45%, #33a0e0 55%, #0b5e8f)
     border: none
     border-radius: 20px
     padding: 15px 25px
@@ -7,7 +7,7 @@
     outline: none
     &:hover
         cursor: pointer
-        background: linear-gradient(-22deg, #0a547f, #38758f, #0a547f)
+        background: linear-gradient(to bottom right, #0b5e8f, #187fbb 45%, #187fbb 55%, #0b5e8f)
 .input
     padding: 1rem 2rem
     margin-bottom: 25px
@@ -67,3 +67,69 @@
     &:hover
         background: none
         color: #000000
+.inquiry-form .form-input 
+    border: none
+    background: transparent
+    border-bottom: 1px solid #303030
+    font-size: 0.8rem
+    font-family: 'RobotoBold', sans-serif
+    padding-bottom: 1.1rem
+    width: 23rem
+    margin: 0 1.5rem 0.8rem
+    box-shadow: none
+.inquiry-form .text 
+    background: url(../img/inquiry.png) left 0.1rem no-repeat
+    background-size: 1.2rem
+    padding-left: 2.1rem
+    padding-bottom: 1.1rem
+    line-height: 0.8rem
+    /*высота строки ввода*/
+    font-size: 1.1rem
+    /*размер шрифта*/
+    color: #303030
+    margin-bottom: 3rem
+.popup
+    display: none
+    position: fixed
+    left: 0
+    top: 0
+    bottom: 0
+    right: 0
+    width: 100%
+    height: 100%
+    z-index: 100
+    background-color: rgba(0, 0, 0, 0.5)
+.popup-content
+    position: fixed
+    left: 50%
+    top: 15%
+    background-color: #ffffff
+    transform: translateX(-50%)
+    padding: 3.1rem 0.6rem 3.4rem
+    width: 62rem
+    text-align: center
+.popup-form .text 
+    display: inline-block
+    width: 23rem
+.popup-close 
+    position: absolute
+    top: -3rem
+    right: 0rem
+    width: 2rem
+    text-align: center
+    border: none
+    background-color: transparent
+    font-size: 3rem
+    color: #ffffff
+    outline: none
+    &:hover
+        cursor: pointer
+.popup-header 
+    margin-bottom: 2.8rem
+    font-size: 1.6rem
+    text-transform: uppercase
+    font-family: 'RobotoBold', sans-serif
+    color: $text-color-dark
+.blue-btn
+    margin-bottom: 1.7rem
+    
