--- a/trgroup/sass/style.sass
+++ b/trgroup/sass/style.sass
@@ -18,3 +18,9 @@ body
     font-family: 'Roboto', sans-serif
     margin: 0
     color: $text-color
+button:focus,
+input:focus,
+a:focus,
+textarea:focus 
+ outline: none
+
