--- a/csrbtrans/sass/_interface.sass
+++ b/csrbtrans/sass/_interface.sass
@@ -31,10 +31,12 @@
     cursor: pointer
 .btn-next
     right: -15px
-    background: transparent url(../img/partners/next.png) center no-repeat
+    background: transparent url(../img/cars/next.png) center no-repeat
+    z-index: 1
 .btn-prev
     left: -15px
-    background: transparent url(../img/partners/prev.png) center no-repeat
+    background: transparent url(../img/cars/prev.png) center no-repeat
+    z-index: 1
 
 .darck-bg
     position: relative
