--- a/csrbtrans/sass/_about.sass
+++ b/csrbtrans/sass/_about.sass
@@ -5,5 +5,7 @@
     background-attachment: fixed
     padding: 80px 0
     text-align: center
-    &-text p
-        font-size: 1.5rem
+    &-text
+        margin-top: 5rem
+        & p
+            font-size: 1.5rem
