--- a/csrbtrans/sass/_countries.sass
+++ b/csrbtrans/sass/_countries.sass
@@ -1,5 +1,6 @@
 .countries
-    margin-top: 6rem
+    padding-top: 6rem
+    background: #DCDCDC
     &-title
         text-align: center
 .country-list
@@ -13,7 +14,7 @@
 #geo-map
     background: url(../img/countries/map-europe2.png) no-repeat
     width: 60rem
-    height: 50rem
+    height: 45rem
     position: relative
     & img
         position: absolute
