--- a/csrbtrans/sass/_header.sass
+++ b/csrbtrans/sass/_header.sass
@@ -35,9 +35,12 @@
         height: 100%
         outline: none
         &:nth-child(1)
-            background: url(../img/header/main-bg.jpg) no-repeat center center
+            background: url(../img/header/main-transport1.jpg) no-repeat center center
             background-size: cover
         &:nth-child(2)
+            background: url(../img/header/main-bg.jpg) no-repeat center center
+            background-size: cover
+        &:nth-child(3)
             background: url(../img/header/world-bg.jpg) no-repeat center center
             background-size: cover
 .line-after
