--- a/csrbtrans/sass/_services.sass
+++ b/csrbtrans/sass/_services.sass
@@ -83,4 +83,6 @@
         cursor: pointer
         background-color: $color-white
         color: $text-color-darck
+.text-title-services
+    margin-bottom: 6rem
 
