--- a/csrbtrans/sass/style.sass
+++ b/csrbtrans/sass/style.sass
@@ -6,8 +6,13 @@
 @import "info"
 @import "countries"
 @import "counters"
+@import "documents"
+@import "offer"
 @import "cars"
+@import "contacts"
+@import "footer"
 @import "modal"
+@import "media"
 html 
     font-size: 10px  
 body
