--- a/csrbtrans/sass/_header.sass
+++ b/csrbtrans/sass/_header.sass
@@ -14,10 +14,11 @@
         display: inline-block
     &-descr
         text-align: center
-    &-phone a
+    &-phone
         font-size: 1.6rem
         font-weight: 700
         color: $text-color-light
+    & span
 .company h3
     font-size: 1.4rem
     color: $text-color-light
@@ -35,10 +36,13 @@
         height: 100%
         outline: none
         &:nth-child(1)
-            background: url(../img/header/main-bg.jpg) no-repeat center center
+            background: url(../img/header/main-transport1.jpg) no-repeat center center
             background-size: cover
         &:nth-child(2)
-            background: url(../img/header/world-bg.jpg) no-repeat center center
+            background: url(../img/header/main-forwarder.jpg) no-repeat center center
+            background-size: cover
+        &:nth-child(3)
+            background: url(../img/header/main-logistics.jpg) no-repeat center center
             background-size: cover
 .line-after
     margin-left: 1.5rem
@@ -70,12 +74,17 @@
     text-align: center
     
 .header-nav li
-    margin-right: 3.4rem
+    margin-right: 2.4rem
     display: inline-block
     font-size: 1.6rem
     & a
         color: $text-color-light
         position: relative
+        transition: .4s
+        padding: 1.5rem
+        &:hover
+            text-decoration: none
+            background-color: rgba(212, 212, 212, 0.3)
 .main-text
     text-align: center
     z-index: 3
