--- a/csrbtrans/sass/_interface.sass
+++ b/csrbtrans/sass/_interface.sass
@@ -11,6 +11,7 @@
         cursor: pointer
         background-color: $color-white
         color: $text-color-darck
+        text-decoration: none
 .kontakt-btn
     background-color: transparent
     padding: 1.2rem
@@ -46,7 +47,6 @@
     font-size: 1.2rem
     color: $text-color-light
     
-
 .darck-bg
     position: relative
     z-index: 2
