--- a/csrbtrans/sass/_about.sass
+++ b/csrbtrans/sass/_about.sass
@@ -1,5 +1,5 @@
 .about
-    background: url(../img/about/information-bg.jpg) no-repeat, #ffffff
+    background: url(../img/about/information-bg1.jpg) no-repeat, #ffffff
     background-position: left 0 center 
     background-size: 50vw
     background-attachment: fixed
@@ -7,5 +7,6 @@
     text-align: center
     &-text
         margin-top: 5rem
+        line-height: 1.7
         & p
             font-size: 1.5rem
