--- a/csrbtrans/sass/_contacts.sass
+++ b/csrbtrans/sass/_contacts.sass
@@ -16,8 +16,8 @@
                 &::before
                     content: ''
                     position: absolute
-                    width: 100%
-                    height: 100%
+                    width: 32px
+                    height: 32px
                     left: 2rem
                     background: url(../img/contacts/adress.png) no-repeat
             &-phone
@@ -25,8 +25,8 @@
                 &::before
                     content: ''
                     position: absolute
-                    width: 100%
-                    height: 100%
+                    width: 32px
+                    height: 32px
                     left: 2rem
                     background: url(../img/contacts/phone.png) no-repeat
             &-mail
@@ -34,8 +34,8 @@
                 &::before
                     content: ''
                     position: absolute
-                    width: 100%
-                    height: 100%
+                    width: 32px
+                    height: 32px
                     left: 2rem
                     background: url(../img/contacts/mail.png) no-repeat
     &-title
