--- a/csrbtrans/sass/_counters.sass
+++ b/csrbtrans/sass/_counters.sass
@@ -73,7 +73,7 @@
     &-block-second
         position: relative
         width: 100%
-        height: 100%
+        height: 223px
         perspective: 1000px
         &:hover .front-second
             transform: rotateY(180deg)
@@ -82,7 +82,7 @@
     &-block-third
         position: relative
         width: 100%
-        height: 100%
+        height: 223px
         perspective: 1000px
         &:hover .front-third
             transform: rotateY(180deg)
