--- a/csrbtrans/sass/_modal.sass
+++ b/csrbtrans/sass/_modal.sass
@@ -1,7 +1,3 @@
-$red: #EF233C
-$blue: #2B2D42
-$orange: #FF9F1C
-
 .btn
     padding: 10px 35px
     display: inline-block
@@ -14,6 +10,7 @@ $orange: #FF9F1C
         cursor: pointer
         background-color: $color-white
         color: $text-color-darck
+        border: 1px solid $text-color-darck
 
 .overlay
     width: 100%
@@ -60,9 +57,7 @@ $orange: #FF9F1C
                max-width: 50rem
                font-size: 1.4rem
                line-height: 1.7
-        .title
-            margin-top: 0
-.documents-title
+.title
     background-color: gray
     padding: 1rem
     color: $text-color-light
