--- a/csrbtrans/sass/_counters.sass
+++ b/csrbtrans/sass/_counters.sass
@@ -1,53 +1,6 @@
-.counters
-    background: url(../img/counters/counters-bg.jpg) no-repeat
-    width: 100%
-    height: 100%
-    padding: 4rem 0
-    margin-top: 3rem
-    &-block-clients
-        background-color: red
-        opacity: 0.6
-        width: 30rem
-        height: 30rem
-        text-align: center
-        &::before
-            content: ''
-            display: inline-block
-            height: 100%
-            vertical-align: middle
-    &-block-country
-        background-color: green
-        opacity: 0.6
-        width: 30rem
-        height: 30rem
-        text-align: center
-        &::before
-            content: ''
-            display: inline-block
-            height: 100%
-            vertical-align: middle
-    &-block-work
-        background-color: blue
-        opacity: 0.6
-        width: 30rem
-        height: 30rem
-        text-align: center
-        &::before
-            content: ''
-            display: inline-block
-            height: 100%
-            vertical-align: middle
-.centered
-    font-size: 3rem
-    display: inline-block
-    color: $text-color-light
-    vertical-align: middle
-    opacity: 1
-    text-transform: uppercase
-.documents-btn-wrap
-    margin-top: 3rem
 .count
     margin-top: 3rem
+    margin-bottom: 3rem
     &-numbers
         padding: 40px 20px
         border: 1px solid rgba(0,0,0, .09)
