--- a/csrbtrans/sass/_services.sass
+++ b/csrbtrans/sass/_services.sass
@@ -79,10 +79,13 @@
     width: 100%
     border-radius: 10rem
     transition: all .4s
+    outline: 0
     &:hover
         cursor: pointer
         background-color: $color-white
         color: $text-color-darck
+    &:focus
+        outline: 0
 .text-title-services
     margin-bottom: 6rem
 
